kubernetes/apps/prod/monitoring/grafana/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_GRAFANA}.${DOMAIN}"
    gethomepage.dev/description: Monitoring Dashboards.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: Grafana
    gethomepage.dev/app: grafana
    gethomepage.dev/widget.type: grafana
    gethomepage.dev/widget.url: "https://${HOST_GRAFANA}.${DOMAIN}"
    gethomepage.dev/widget.username: ${GRAFANA_USERNAME}
    gethomepage.dev/widget.password: ${GRAFANA_PASSWORD}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${HOST_GRAFANA}.${DOMAIN}`) && PathPrefix(`/vmui`)"
      services:
        - kind: Service
          name: grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: grafana.${DOMAIN}
